[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "tropicbliss",email = "tropicbliss@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "angr (>=9.2.146,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
